--- a/TODO
+++ b/TODO
@@ -4,6 +4,8 @@ Planned Features
  * No dependency on ruby-inabox. This code's ancestor was a Rails project with
    complex, specific gem dependencies. It is overkill to build Ruby from
    scratch, at least on Linux and OSX.
+ * Plugin support:
+   * http://github.com/jasondavies/couchdb/tree/mdns
 
 Bugs
 ====
